# Django-Rest-Api

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dauth.sqlite3  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  to_be_deleted.py
.envs/: .env.example  .env.sample
.github/workflows/: CD.yaml  CI.yaml  deploy.yaml  pr.yaml  quality_assurance.yaml
DAUTH/apps/accounts/: mailers.py
DAUTH/config/: urls.py
DAUTH/config/settings/: __init__.py  envvars.py
DAUTH/tests/: conftest.py
DAUTH/tests/accounts/: test_api_views.py  test_models.py
config/: asgi.py  urls.py
config/settings/: __init__.py  envvars.py
config/settings/components/: base.py  custom.py  database.py  third_party.py
config/settings/environments/: development.py  production.py  settings.dev.py.template
config/settings/utils/: misc.py
dj-rest-api/config/: urls.py  wsgi.py
dj-rest-api/tests/accounts/: test_serializers.py  test_signals.py
dj_rest_api/: __init__.py  conftest.py  manage.py
dj_rest_api/apps/accounts/: admin.py  apps.py  exceptions.py  filters.py  mailers.py  permissions.py  responses.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
dj_rest_api/apps/api/: api_router.py  apps.py  urls.py
dj_rest_api/apps/authentication/: auth.py  exceptions.py  mailers.py  serializers.py  services.py  tasks.py  tokens.py  urls.py  views.py
dj_rest_api/config/: api_urls.py  celery.py  urls.py
dj_rest_api/config/settings/: __init__.py
dj_rest_api/core/: views.py
dj_rest_api/core/api/: exceptions.py  parsers.py  permissions.py  responses.py  serializers.py  urls.py  views.py
dj_rest_api/core/mailers/: __init__.py  auth_mailers.py  user_mailers.py
dj_rest_api/lib/api/: exceptions.py  responses.py  serializers.py  urls.py  views.py
dj_rest_api/lib/utils/: generic_helpers.py
dj_rest_api/locale/: README.md
dj_rest_api/tests/accounts/: test_api_endpoints.py  test_models.py  test_serializers.py  test_services.py  test_signals.py  test_views.py
dj_rest_api/tests/fixtures/: __init__.py  accounts.py  clients.py  factories.py
docker/: Dockerfile.venv  Dockerfile.wheel
nginx/: Dockerfile  default.conf  nginx.conf
scripts/: dockerized-dauth-run.sh  dockerized-drest-run.sh  entrypoint.sh
src/: conftest.py  manage.py
src/apps/accounts/: admin.py  apps.py  mailers.py  signals.py  urls.py
src/apps/authentication/: admin.py  apps.py  mailers.py  signals.py  utils.py  validators.py
src/apps/core/: mailers.py  middleware.py  services.py
src/config/: asgi.py  urls.py  wsgi.py
src/config/settings/: envvars.py  (+1 more)
src/tests/: conftest.py
(+227 files in other folders)
